--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,14 @@
     <h1>STI-Frontend</h1>
     <div id="app" />
     <script src="/public/js/index.js"></script>
+
+    <div>
+      <table id="mytable">
+
+      </table>
+      <br/>
+      <button onclick="createRow()">Insert</button>
+    </div>
+
   </body>
   </html>
