add data.json with footballdata. add functions to index.js

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,15 @@
     <div id="app" />
     <script src="/public/js/index.js"></script>
 
-    <div>
+    <!-- <div>
       <table id="mytable">
 
       </table>
       <br/>
       <button onclick="createRow()">Insert</button>
     </div>
+ -->
 
+    
   </body>
   </html>
