add button for age()

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <div id="app" />
     <script src="/public/js/index.js"></script>
 
+
+    <button onClick="age()">Hämta tabell</button>
     <!-- <div>
       <table id="mytable">
 
