--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Bootstrap CSS -->
+     <link
+     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+     rel="stylesheet"
+     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+     crossorigin="anonymous"
+   />
     <link rel="stylesheet" href="/public/css/index.css">
     <title>Document</title>
   </head>
   <body>
-    <h1>STI-Frontend</h1>
-    <div id="app" />
-    <script src="/public/js/index.js"></script>
-
-
-    <button onClick="age()">Hämta tabell</button>
-    <!-- <div>
-      <table id="mytable">
-
-      </table>
-      <br/>
-      <button onclick="createRow()">Insert</button>
+    <div id="indexTop">
+    <h5>STI-Frontend</h5>
     </div>
- -->
+    <div id="app"/>
+    <script src="/js/index.js"></script>
+    <!-- <script src="/js/fotboll.js"></script> -->
 
+    <div id="containern">
+    <table id="myTable">
+      <caption>So far not so good!</caption>
+      <tr><th scope="col">Name</th><th scope="col">Link</th></tr>
+    </table><br/>
+    <button onclick="insertrow()">Insert</button>
+    <button onclick="deleterow()">Delete</button>
+    </div>
     
   </body>
   </html>
