--- a/public/index.html
+++ b/public/index.html
@@ -11,25 +11,25 @@
      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
      crossorigin="anonymous"
    />
-    <link rel="stylesheet" href="/public/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Document</title>
   </head>
   <body>
     <div id="indexTop">
     <h5>STI-Frontend</h5>
     </div>
-    <div id="app"/>
-    <script src="/js/index.js"></script>
-    <!-- <script src="/js/fotboll.js"></script> -->
+    <div id="app"></div>
+    <!-- <script src="/js/index.js"></script> -->
+    <script src="/js/fotboll.js"></script>
 
-    <div id="containern">
+    <!-- <div id="containern">
     <table id="myTable">
       <caption>So far not so good!</caption>
       <tr><th scope="col">Name</th><th scope="col">Link</th></tr>
     </table><br/>
     <button onclick="insertrow()">Insert</button>
     <button onclick="deleterow()">Delete</button>
-    </div>
+    </div> -->
     
   </body>
   </html>
