attempt to apply sound via theWave.js

--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,9 @@
     <div id="app"></div>
     <!-- <script src="/js/index.js"></script> -->
     <script src="/js/fotboll.js"></script>
-
-    <!-- <div id="containern">
-    <table id="myTable">
-      <caption>So far not so good!</caption>
-      <tr><th scope="col">Name</th><th scope="col">Link</th></tr>
-    </table><br/>
-    <button onclick="insertrow()">Insert</button>
-    <button onclick="deleterow()">Delete</button>
-    </div> -->
+    <script src="/js/theWave.js"></script>
+    <button onclick="play-button">Play/Pause</button>
+    
     
   </body>
   </html>
