--- a/public/fotboll.html
+++ b/public/fotboll.html
@@ -11,11 +11,13 @@
    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
    crossorigin="anonymous"
  />
-  <link rel="stylesheet" href="/public/css/fotboll.css">
+  <link rel="stylesheet" href="/css/fotboll.css">
   <title>Fotbollstabellen</title>
 </head>
 <body>
-  <script src="/js/fotboll.js"></script>
+  <div id="app"></div>
+    
+    <script src="/js/fotboll.js"></script>
   
 </body>
 </html>
