--- a/public/theWave.html
+++ b/public/theWave.html
@@ -12,17 +12,19 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
 />
-<link rel="stylesheet" href="theWave.css">
-<script src="/js/theWave.js"></script>
+<link rel="stylesheet" href="/css/theWave.css">
+
   
   <title>The Wave</title>
 </head>
 <body>
   <div id="header">
-    <h6>The Wave</h6>
+    <h2>The Wave</h2>
     <p id="header_sub">called Dawe</p>
-
-    
   </div>
+
+  <script src="/js/theWave.js" type="module"></script>
+  <button id="play/pause" type="button" onclick="button">Play/Pause</button>
+
 </body>
 </html>
