--- a/public/theWave.html
+++ b/public/theWave.html
@@ -22,6 +22,7 @@
     <h2>The Wave</h2>
     <p id="header_sub">called Dawe</p>
   </div>
+<div id="app"></div>
 
   <script src="/js/theWave.js" type="module"></script>
   <button id="play/pause" type="button" onclick="button">Play/Pause</button>
